Fix application ID computation.
The application ID is not necessarily derived from the block's last
outgoing message: There might be additional messages created by the
application's initialization itself.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -729,7 +729,10 @@ SystemMessage:
         STRUCT:
           - operation_index: U32
     7:
-      ApplicationCreated: UNIT
+      ApplicationCreated:
+        STRUCT:
+          - bytecode_id:
+              TYPENAME: BytecodeId
     8:
       BytecodeLocations:
         STRUCT:
