--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ metrics-util = "0.15.0"
 linked-hash-map = "0.5.3"
 once_cell = "1.17.1"
 parse_duration = "2.1.1"
+prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
 proptest = "1.0.0"
