--- a/configuration/k8s-local/validator_1.toml
+++ b/configuration/k8s-local/validator_1.toml
@@ -1,6 +1,8 @@
 server_config_path = "server_1.json"
 host = "127.0.0.1"
 port = 19100
+metrics_host = "validator-1"
+metrics_port = 21100
 internal_host = "validator-1"
 internal_port = 20100
 external_protocol = "Grpc"
