--- a/configuration/local/validator_2.toml
+++ b/configuration/local/validator_2.toml
@@ -3,6 +3,8 @@ host = "127.0.0.1"
 port = 9200
 internal_host = "127.0.0.1"
 internal_port = 10200
+metrics_host = "127.0.0.1"
+metrics_port = 11200
 external_protocol = "Grpc"
 internal_protocol = "Grpc"
 
