--- a/configuration/local/validator_3.toml
+++ b/configuration/local/validator_3.toml
@@ -3,6 +3,8 @@ host = "127.0.0.1"
 port = 9300
 internal_host = "127.0.0.1"
 internal_port = 10300
+metrics_host = "127.0.0.1"
+metrics_port = 11300
 external_protocol = "Grpc"
 internal_protocol = "Grpc"
 
