--- a/configuration/local/validator_4.toml
+++ b/configuration/local/validator_4.toml
@@ -3,6 +3,8 @@ host = "127.0.0.1"
 port = 9400
 internal_host = "127.0.0.1"
 internal_port = 10400
+metrics_host = "127.0.0.1"
+metrics_port = 11400
 external_protocol = "Grpc"
 internal_protocol = "Grpc"
 
