--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -19,7 +19,6 @@ wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb", "linera-storage/rocksdb"]
 aws = ["linera-views/aws", "linera-core/aws", "linera-storage/aws"]
 scylladb = ["linera-views/scylladb", "linera-core/scylladb", "linera-storage/scylladb"]
-prometheus-metrics = ["dep:prometheus"]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -44,10 +43,9 @@ linera-execution = { workspace = true }
 linera-rpc = { workspace = true }
 linera-storage = { workspace = true }
 linera-views = { workspace = true }
-metrics-exporter-tcp = { workspace = true }
 once_cell = { workspace = true }
 parse_duration = { workspace = true }
-prometheus = { workspace = true, optional = true }
+prometheus = { workspace = true }
 rand07 = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true }
