Change all metrics crate usage to Prometheus

--- a/linera-chain/Cargo.toml
+++ b/linera-chain/Cargo.toml
@@ -19,7 +19,7 @@ async-lock = { workspace = true }
 async-graphql = { workspace = true }
 linera-base = { workspace = true }
 linera-execution = { workspace = true }
-linera-views = { workspace = true, features = ["metrics"] }
+linera-views = { workspace = true }
 futures = { workspace = true }
 rand_distr = { workspace = true, features = ["serde1"] }
 rand_chacha = { workspace = true }
