--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -36,6 +36,7 @@ linera-storage = { workspace = true }
 linera-views = { workspace = true }
 tracing = { workspace = true }
 lru = { workspace = true }
+prometheus = { workspace = true }
 proptest = { workspace = true, optional = true }
 rand = { workspace = true }
 serde = { workspace = true }
@@ -55,8 +56,6 @@ reentrant-counter = { workspace = true }
 fungible = { workspace = true }
 linera-core = { path = ".", default-features = false, features = ["test"] }
 linera-views = { workspace = true }
-metrics = { workspace = true }
-metrics-util = { workspace = true }
 serde_json = { workspace = true }
 social = { workspace = true }
 test-case = { workspace = true }
