--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,7 @@ members = [
         "linera-witty-macros",
         "linera-explorer",
 ]
-exclude = [
-        "examples",
-        "scripts",
-]
+exclude = ["examples", "scripts"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -63,12 +60,10 @@ frunk = "0.4.2"
 futures = "0.3.24"
 generic-array = { version = "0.14.4", features = ["serde"] }
 hex = "0.4.3"
+lazy_static = "1.4.0"
 http = "0.2.7"
 log = "0.4.17"
 lru = "0.9.0"
-metrics = "0.21.0"
-metrics-exporter-tcp = "0.8.0"
-metrics-util = "0.15.0"
 linked-hash-map = "0.5.3"
 once_cell = "1.17.1"
 parse_duration = "2.1.1"
@@ -97,7 +92,9 @@ structopt = "0.3.23"
 syn = "1.0.107"
 tempfile = "3.2.0"
 test-case = "3.0.0"
-test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
+test-log = { version = "0.2.11", default-features = false, features = [
+        "trace",
+] }
 test-strategy = "0.2.0"
 thiserror = "1.0.38"
 tonic = "0.8"
@@ -110,7 +107,9 @@ tokio-util = "0.6.9"
 toml = "0.7.3"
 tower-http = "0.4.0"
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.16", default-features = false, features = [
+        "env-filter",
+] }
 wasm-encoder = "0.24.1"
 wasmer = { version = "=3.1.1", features = ["singlepass"] }
 wasmer-middlewares = "3.1.1"
