--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -31,7 +31,7 @@ dashmap = { workspace = true }
 derive_more = { workspace = true }
 futures = { workspace = true }
 linera-base = { workspace = true }
-linera-views = { workspace = true, features = ["metrics"] }
+linera-views = { workspace = true }
 linera-views-derive = { workspace = true }
 lru = { workspace = true }
 once_cell = { workspace = true }
