--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -19,7 +19,6 @@ wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb", "linera-storage/rocksdb"]
 aws = ["linera-views/aws", "linera-core/aws", "linera-storage/aws"]
 scylladb = ["linera-views/scylladb", "linera-core/scylladb", "linera-storage/scylladb"]
-prometheus-metrics = ["dep:prometheus"]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -39,7 +38,6 @@ linera-execution = { workspace = true }
 linera-rpc = { workspace = true }
 linera-storage = { workspace = true }
 linera-views = { workspace = true }
-metrics-exporter-tcp = { workspace = true }
 once_cell = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 tracing = { workspace = true }
@@ -59,7 +57,7 @@ tower-http = { workspace = true, features = ["cors"] }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 comfy-table = { workspace = true }
 dirs = { workspace = true }
-prometheus = { workspace = true, optional = true }
+prometheus = { workspace = true }
 file-lock = "2.1.9"
 current_platform = "0.2.0"
 cargo_toml = "0.15.3"
