use Structopt in test-runner

--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -46,6 +46,7 @@ linera-core = { workspace = true, features = ["test"] }
 linera-execution = { workspace = true }
 linera-storage = { workspace = true }
 serde_json = { workspace = true }
+structopt = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 wasmtime = { workspace = true }
 wit-bindgen-host-wasmtime-rust = { workspace = true }
