--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [target.wasm32-unknown-unknown]
-# Requires running `cargo build --release --bin test-runner` once first.
-runner = "target/release/test-runner"
+# Requires running `cargo build --release --bin linera-wasm-test-runner` once first.
+runner = "target/release/linera-wasm-test-runner"
