--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,11 +72,11 @@ jobs:
     - name: Build Wasm test runner
       # use debug mode to avoid building wasmtime in release mode
       run: |
-        cargo build --locked --bin test-runner
+        cargo build --locked --bin linera-wasm-test-runner
     - name: Run Wasm application tests
       run: |
         cd examples
-        CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER=../target/debug/test-runner cargo test --target wasm32-unknown-unknown
+        CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER=../target/debug/linera-wasm-test-runner cargo test --target wasm32-unknown-unknown
         cargo test --locked --target x86_64-unknown-linux-gnu
     - name: Run Witty integration tests
       run: |
