--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -45,9 +45,13 @@ jobs:
       uses: arduino/setup-protoc@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build
+    - name: Build the main workspace
       run: |
-        cargo build --locked --features aws,test
+        RUSTFLAGS="-C opt-level=3 -C debuginfo=1" cargo build --locked --features aws,test
+    - name: Build example applications
+      run: |
+        cd examples
+        cargo build --locked --release --target wasm32-unknown-unknown
     - name: Setup local DynamoDB instance
       run: |
         docker run --rm -d --name local-dynamodb -p 8000:8000/tcp amazon/dynamodb-local
@@ -58,4 +62,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: test
         LOCALSTACK_ENDPOINT: http://localhost:8000
       run: |
-        cargo test --locked --features aws -- dynamo
+        RUSTFLAGS="-C opt-level=3 -C debuginfo=1" cargo test --locked --features aws -- dynamo
