--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -45,12 +45,16 @@ jobs:
       uses: arduino/setup-protoc@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build
+    - name: Build the main workspace
       run: |
-        cargo build --locked --features scylladb,test
+        RUSTFLAGS="-C opt-level=3 -C debuginfo=1" cargo build --locked --features scylladb,test
+    - name: Build example applications
+      run: |
+        cd examples
+        cargo build --locked --release --target wasm32-unknown-unknown
     - name: Setup local ScyllaDB instance
       run: |
         docker run --name my_scylla_container -d -p 9042:9042 scylladb/scylla
     - name: Run ScyllaDB tests
       run: |
-        cargo test --locked --features scylladb -- scylla
+        RUSTFLAGS="-C opt-level=3 -C debuginfo=1" cargo test --locked --features scylladb -- scylla
