Log Wasm fuel used per block

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -35,6 +35,7 @@ linera-views = { workspace = true, features = ["metrics"] }
 linera-views-derive = { workspace = true }
 lru = { workspace = true }
 once_cell = { workspace = true }
+prometheus = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_json = { workspace = true }
