--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -731,10 +731,7 @@ SystemMessage:
         STRUCT:
           - operation_index: U32
     7:
-      ApplicationCreated:
-        STRUCT:
-          - bytecode_id:
-              TYPENAME: BytecodeId
+      ApplicationCreated: UNIT
     8:
       BytecodeLocations:
         STRUCT:
