--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ frunk = "0.4.2"
 futures = "0.3.24"
 generic-array = { version = "0.14.4", features = ["serde"] }
 hex = "0.4.3"
+pin-project = "1.1.3"
 http = "0.2.7"
 log = "0.4.17"
 lru = "0.9.0"
@@ -103,6 +104,7 @@ tokio-test = "0.4.2"
 tokio-util = "0.6.9"
 toml = "0.7.3"
 tower-http = "0.4.0"
+tower = "0.4.13"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }
 wasm-encoder = "0.24.1"
