--- a/linera-service/template/service.rs.template
+++ b/linera-service/template/service.rs.template
@@ -19,7 +19,7 @@ impl Service for Application {{
     type Error = ServiceError;
     type Storage = ViewStateStorage<Self>;
 
-    async fn handle_application_query(
+    async fn handle_query(
         self: Arc<Self>,
         _context: &QueryContext,
         _query: Self::Query,
