Finish up some SDK APIs (breaking changes) (#1151)
* sdk: hide some private APIs

* breaking: rename Service::query_application into Service::handle_application_query

* breaking: rename query_application into handle_application_query

* breaking: fix names of poll-* variant in wit files

* fix wasm test

* undo system_api::query_application -> system_api::handle_application_query

* Create type function Service::query_application similar to Contract::call_application

* fix comments

* make two more untyped SDK APIs private + fix bug in Service::parameters()

* rename handle_application_query into handle_query

--- a/linera-service/template/service.rs.template
+++ b/linera-service/template/service.rs.template
@@ -19,7 +19,7 @@ impl Service for Application {{
     type Error = ServiceError;
     type Storage = ViewStateStorage<Self>;
 
-    async fn query_application(
+    async fn handle_query(
         self: Arc<Self>,
         _context: &QueryContext,
         _query: Self::Query,
