--- a/kubernetes/linera-validator/Chart.yaml
+++ b/kubernetes/linera-validator/Chart.yaml
@@ -28,3 +28,7 @@ dependencies:
   - name: kube-prometheus-stack
     version: "51.0.3"
     repository: "https://prometheus-community.github.io/helm-charts"
+
+  - name: loki-stack
+    version: "2.8.9"
+    repository: "https://grafana.github.io/helm-charts"
