--- a/kubernetes/linera-validator/values-dev-gcp.yaml
+++ b/kubernetes/linera-validator/values-dev-gcp.yaml
@@ -3,3 +3,20 @@
 lineraImage: us-docker.pkg.dev/linera-io-dev/linera-docker-repo/zefchain-gcp-test:0.1
 lineraImagePullPolicy: Always
 logLevel: "info"
+
+loki-stack:
+  loki:
+    enabled: true
+    persistence:
+      enabled: true
+      size: 10Gi
+  grafana:
+    enabled: true
+    sidecar:
+      datasources:
+        enabled: true
+  promtail:
+    enabled: true
+    config:
+      clients:
+        - url: http://linera-core-loki:3100/loki/api/v1/push
