Make the update to the balance by the storage fees progressively.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -590,7 +590,7 @@ Pricing:
         TYPENAME: Amount
     - fuel:
         TYPENAME: Amount
-    - storage_n_read:
+    - storage_num_reads:
         TYPENAME: Amount
     - storage_bytes_read:
         TYPENAME: Amount
