--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -79,6 +79,7 @@ matching-engine = { workspace = true }
 proptest = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 social = { workspace = true }
+test-case = { workspace = true }
 test-log = { workspace = true, features = ["trace"] }
 test-strategy = { workspace = true }
 tokio = { workspace = true, features = ["full", "test-util"] }
