--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -72,7 +72,7 @@ linera-chain = { workspace = true, features = ["test"] }
 linera-core = { workspace = true, features = ["test"] }
 linera-execution = { workspace = true, features = ["test"] }
 linera-rpc = { workspace = true, features = ["test"] }
-linera-service = { workspace = true, features = ["test"] }
+linera-service = { path = ".", features = ["test"] }
 linera-storage = { workspace = true, features = ["test"] }
 linera-views = { workspace = true, features = ["test"] }
 matching-engine = { workspace = true }
