--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -36,6 +36,7 @@ dirs = { workspace = true }
 file-lock = "2.1.9"
 futures = { workspace = true }
 hex = { workspace = true }
+http = { workspace = true }
 linera-base = { workspace = true }
 linera-chain = { workspace = true }
 linera-core = { workspace = true }
@@ -58,6 +59,7 @@ tokio-stream = { workspace = true }
 toml = { workspace = true }
 tonic = { workspace = true }
 tonic-health = { workspace = true }
+tower = { workspace = true }
 tower-http = { workspace = true, features = ["cors"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
