Run `cargo upgrade` from the cargo-edit package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,89 +27,89 @@ resolver = "2"
 
 [workspace.dependencies]
 heck = "0.4.1"
-anyhow = "1.0.57"
-async-graphql = "5.0.7"
-async-graphql-axum = "5.0.5"
+anyhow = "1.0.75"
+async-graphql = "5.0.10"
+async-graphql-axum = "5.0.10"
 async-lock = "2.8.0"
 async-stream = "0.3.5"
-async-trait = "=0.1.58"
+async-trait = "0.1.74"
 aws-config = "0.14.0"
 aws-sdk-dynamodb = "0.14.0"
 aws-sdk-s3 = "0.14.0"
 aws-smithy-http = "0.44.0"
 aws-types = "0.14.0"
-scylla = "0.8.1"
-axum = "0.6.2"
-bcs = "0.1.3"
+scylla = "0.8.2"
+axum = "0.6.20"
+bcs = "0.1.6"
 bincode = "1.3.3"
-bytes = "1.2.1"
-cargo_toml = "0.15.2"
-chrono = "0.4.23"
-colored = "2.0.0"
-comfy-table = "6.1.4"
+bytes = "1.5.0"
+cargo_toml = "0.15.3"
+chrono = "0.4.31"
+colored = "2.0.4"
+comfy-table = "6.2.0"
 convert_case = "0.6.0"
 criterion = "0.4.0"
 custom_debug_derive = "0.5.1"
-dashmap = "5.4.0"
+dashmap = "5.5.3"
 derive_more = "0.99.17"
-dirs = "5.0.0"
-ed25519 = "1.2.0"
+dirs = "5.0.1"
+ed25519 = "1.5.3"
 ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
 either = "1.9.0"
 frunk = "0.4.2"
-futures = "0.3.24"
-generic-array = { version = "0.14.4", features = ["serde"] }
+futures = "0.3.29"
+generic-array = { version = "0.14.7", features = ["serde"] }
 hex = "0.4.3"
 pin-project = "1.1.3"
-http = "0.2.7"
-log = "0.4.17"
+http = "0.2.9"
+log = "0.4.20"
 lru = "0.9.0"
-linked-hash-map = "0.5.3"
-once_cell = "1.17.1"
+linked-hash-map = "0.5.6"
+once_cell = "1.18.0"
 parse_duration = "2.1.1"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
-proptest = "1.0.0"
+proptest = "1.3.1"
 prost = "0.11"
 quote = "1.0"
 rand = "0.8.5"
 rand07 = { package = "rand", version = "0.7.3" }
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
-reqwest = "0.11.14"
+reqwest = "0.11.22"
 rocksdb = "0.21.0"
-serde = { version = "1.0.152", features = ["derive"] }
-serde_bytes = "0.11.8"
-serde_json = "1.0.93"
-serde_yaml = "0.8.21"
-serde-name = "0.2.0"
-serde-reflection = "0.3.5"
-sha3 = "0.10.6"
-similar-asserts = "1.1.0"
+serde = { version = "1.0.190", features = ["derive"] }
+serde_bytes = "0.11.12"
+serde_json = "1.0.107"
+serde_yaml = "0.8.26"
+serde-name = "0.2.1"
+serde-reflection = "0.3.6"
+sha3 = "0.10.8"
+similar-asserts = "1.5.0"
 static_assertions = "1.1.0"
-structopt = "0.3.23"
-syn = "1.0.107"
-tempfile = "3.2.0"
-test-case = "3.0.0"
-test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
-test-strategy = "0.2.0"
-thiserror = "1.0.38"
+structopt = "0.3.26"
+syn = "1.0.109"
+tempfile = "3.8.1"
+test-case = "3.2.1"
+test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
+test-strategy = "0.2.1"
+thiserror = "1.0.50"
 tonic = "0.8"
 tonic-build = "0.8"
 tonic-health = "0.8"
-tokio = "1.25.0"
-tokio-stream = "0.1.11"
-tokio-test = "0.4.2"
-tokio-util = "0.6.9"
-toml = "0.7.3"
-tower-http = "0.4.0"
+tokio = "1.33.0"
+tokio-stream = "0.1.14"
+tokio-test = "0.4.3"
+tokio-util = "0.6.10"
+toml = "0.7.8"
+tower-http = "0.4.4"
 tower = "0.4.13"
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter"] }
 wasm-encoder = "0.24.1"
 wasmer = { version = "=3.1.1", features = ["singlepass"] }
-wasmer-middlewares = "3.1.1"
+wasmer-middlewares = "=3.1.1"
 wasmer-vm = { version = "=3.1.1" }
 wasmparser = "0.101.1"
 wasmtime = "1.0"
