--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -37,9 +37,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Install Protoc
       uses: arduino/setup-protoc@v1
       with:
@@ -59,9 +57,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Checkout docs.rs tool repository
       run: |
         cd ${{ runner.temp }}
