--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
+    - uses: Twey/setup-rust-toolchain@v1
     - name: Clear up some space
       run: |
         sudo rm -rf /usr/share/dotnet
@@ -97,7 +97,11 @@ jobs:
       run: >
         find linera-* -name '*.rs' -a -not -wholename '*/target/*' -print0
         | xargs -0 -L1 ./scripts/target/release/check_copyright_header
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
+    - uses: Twey/setup-rust-toolchain@v1
+      with:
+        toolchain: nightly-2023-10-22
+        target: wasm32-unknown-unknown
+        components: clippy rustfmt
     - name: Install cargo-machete
       run: |
         cargo install cargo-machete --locked
@@ -116,7 +120,7 @@ jobs:
         cargo install cargo-sort --locked
     - name: Check formatting
       run: |
-        cargo fmt -- --check
+        cargo +nightly-2023-10-22 fmt -- --check
     - name: Check for unused dependencies
       run: |
         cargo machete
