--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -48,6 +48,8 @@ once_cell = { workspace = true }
 parse_duration = { workspace = true }
 prometheus = { workspace = true }
 rand07 = { workspace = true }
+rand = { workspace = true }
+pathdiff = "0.2.1"
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
